Fix cover photo positioning on small screens

--- a/client/shared/styles/app.css
+++ b/client/shared/styles/app.css
@@ -8,11 +8,6 @@ body {
     -webkit-backdrop-filter: saturate(180%) blur(20px);
     backdrop-filter: saturate(180%) blur(20px);
     padding: 15px 0;
-    /*background: linear-gradient(
-        to top,
-        rgba(0, 0, 0, 0),
-        rgba(0, 0, 0, 0.3)
-    )*/
 }
 .site-header a {
     color: #ffffff;
@@ -25,7 +20,8 @@ body {
 
 .cover-photo {
     transition: background-image 0.8s ease-in-out;
-    background-size: 100%;
+    background-size: cover;
+    background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
     z-index: -1;
